# SleepTracker

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-entrypoint.sh  justfile  openapi.yaml
.cargo/: config.toml
.github/workflows/: ci-backend.yml  ci-docker.yml  ci-frontend.yml  ci.yml
docs/: api_examples.md  feature-reference.md  personalization-agent-action-map.md  personalization-metrics-shortlist.md
docs/agent/: rulebook.md
docs/coding-agent/: index.md  lessons.md  skill-candidates.md
docs/coding-agent/design/: architecture.md  core-beliefs.md  taste.md
docs/coding-agent/plans/: README.md  tech-debt-tracker.md
docs/coding-agent/plans/active/: README.md  pr53-unresolved-comments-and-main-conflict-resolution-plan.md  sleep-edit-dark-mode-parity-and-dry-plan.md  sleep-ui-e2e-db-isolation-guardrails-plan.md  sleep-ui-stable-selector-coverage-plan.md
docs/coding-agent/quality/: QUALITY_SCORE.md  backend-principles.md  frontend-principles.md  gates-architecture.md  gates-rust.md  gates-svelte-typescript.md  index.md
docs/coding-agent/references/: how-to-run.md  improvement-loop.md  ui-e2e.md  validation.md
docs/coding-agent/rules/: common.md  index.md  orchestrator.md  worker.md
docs/coding-agent/troubleshooting/: index.md  persistent-terminal-cwd.md
docs/plans/: dashboard-history-plan.md
migrations/: 0001_init.sql  0002_add_duration_min.sql  0003_views.sql  0004_multi_sleep_sessions.sql  0005_personalization_friction.sql
sleep-api/: Cargo.toml
sleep-api/src/: app.rs  auth.rs  config.rs  db.rs  domain.rs  error.rs  handlers.rs  lib.rs  main.rs  repository.rs  time.rs  trends.rs  views.rs
sleep-api/src/middleware/: auth_layer.rs  mod.rs
sleep-api/src/models/: exercise.rs  friction.rs  intensity.rs  mod.rs  note.rs  quality.rs  sleep.rs
sleep-api/src/security/: csrf.rs  headers.rs  mod.rs
sleep-api/templates/: trends.html
sleep-api/tests/: api_exercise_intensity.rs  api_sleep.rs  api_sleep_list.rs  auth_csrf.rs  exercise_validation.rs  friction_repository.rs  settings_timezone.rs  time_dst.rs  trends_bars.rs
sleep-ui/: Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
sleep-ui/src/: app.css  app.d.ts  app.html
sleep-ui/src/lib/: api.ts
sleep-ui/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
sleep-ui/tests/: auth.setup.ts  auth.spec.ts  e2e.spec.ts  global.setup.ts  global.teardown.ts
sleep-ui/tests/unit/: csrf.spec.ts  intensity.spec.ts  sleep-store.spec.ts  sleep.spec.ts  theme.spec.ts  time.spec.ts  trends.spec.ts
tests/: api_sleep.rs
(+47 files in other folders)
