[package]
name = "sleep-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features=["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features=["serde"] }
thiserror = "1.0"
hyper = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
