[package]
name = "sleep-api"
version = "0.1.0"
edition = "2024"
description = "SleepTracker API components: Axum router, models, SQLx repository, and DST-aware time helpers."
license = "MIT"
repository = "https://github.com/ebigunso/SleepTracker"
authors = ["ebigunso"]
keywords = ["sleep", "axum", "sqlx", "sqlite", "api"]
categories = ["web-programming::http-server", "database", "api-bindings"]

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8.6", features=["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features=["serde"] }
chrono-tz = "0.10.4"
time = "0.3.36"
thiserror = "2.0.12"
hyper = "1"
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed", "cookie-private"] }
tower-http = { version = "0.6", features = ["set-header", "fs"] }
argon2 = "0.5"
cookie = { version = "0.18", features = ["secure"] }
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
